@@ -2,5 +2,5 @@ import QtQuick 1.1
 import "qrc:/core/maps"
 
 Map {
-    backgroundImage: "qrc:/img/maps/test1.jpg"
+    backgroundImage: "qrc:/img/maps/test2.jpg"
 }
